fixed for edge on mobile

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -20,7 +20,7 @@ body
   grid-template-areas: "side-panel"
   grid-template-rows: 100%
   gap: 0.05rem
-  height: 100vh
+  height: 100dvh
   background-color: map-get($colors-map, vacant-space)
   > div
     background-color: rgba(255, 255, 255, 0.8)
